# rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  cliff.toml  decode.txt  deny.toml  ed25519.pk  ed25519.sk  encode.txt  test.http
.github/workflows/: build.yml
fixtures/: chacha20.key  chacha20.nonce  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  opts.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
