[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["xo🦀"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.3"
chacha20poly1305 = { version = "0.10.1", features = ["rand_core"] }
clap = { version = "4.5.13", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum_dispatch = "0.3.13"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
toml = "0.8.19"
tower-http = { version = "0.5.2", features = ["fs", "compression-full", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "3.1.0"
